# my-project

./: .gitignore
Resources/: stock_prediction_model.keras  stock_prediction_using_LSTM.ipynb
backend/: pyproject.toml
backend/.ruff_cache/0.12.10/: 5174957949556888765  5406378559157160559  7553126956523287164  7671042059382409201
backend/api/: filters.py  ml_utils.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/blogs/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/blogs/management/commands/: create_articles.py
backend/blogs/migrations/: 0001_initial.py
backend/certs/: localhost.crt  localhost.key
backend/django_rest_main/: settings.py  urls.py
backend/students/: admin.py  models.py  urls.py  views.py
backend/students/migrations/: 0001_initial.py  0002_alter_student_branch.py  0003_student_created_at.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: AddStudentModal.jsx  FlashMessage.jsx  Footer.jsx  Header.jsx  Icon.jsx  MoviesList.jsx  Pagination.jsx  ProtectedRoute.jsx  Search.jsx  SearchFilters.jsx  StudentTable.jsx  Text.jsx  TrendingMovies.jsx
frontend/src/context/: auth-context.jsx  auth-provider.jsx
frontend/src/hooks/: useAuth.js  usePageMeta.jsx  useStudents.js
frontend/src/layouts/: AppLayout.jsx
frontend/src/pages/: About.jsx  Dashboard.jsx  ErrorPage.jsx  Home.jsx  Login.jsx  Prediction.jsx  SignUp.jsx  StockView.jsx
