[project]
name = "drf-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "dj-rest-auth>=7.0.1",
    "django>=5.2.4",
    "django-allauth[socialaccount]>=65.11.0",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-nested-routers>=0.94.2",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "django-debug-toolbar>=6.0.0",
    "django-extensions>=4.1",
    "pyopenssl>=25.1.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.8",
    "werkzeug>=3.1.3",
]
